# EmptyProject

./: .flake8  Dockerfile  ReadMe.md  alembic.ini  docker-compose.yml  pyproject.toml
src/: database.py  main.py
src/api/: routes.py
src/api/v1/: ingredient.py  menu.py  parse.py  sostav.py  summary.py  user.py
src/crud/: ingredient.py  menu.py  sostav.py  summary.py  user.py
src/migrations/: env.py
src/migrations/versions/: 06c33d8b15a0_.py  1d67ced85c83_.py  3fc242170c45_.py  4e6c03a44767_.py
src/models/: menu.py  user.py
src/schemas/: ingredient.py  menu.py  sostav.py  summary.py  user.py
src/settings/: database.py  settings.py
